* Fix scripts failing to load if a directory exists with the same name (#1100).
* Improve Lua error messages.

Lua API changes
---------------

Changes that introduce incompatibilities:

* 

Changes that do not introduce incompatibilities:

* Video mode functions are now deprecated. Use shader functions instead.
* Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
* Add methods entity:get_layer() and entity:set_layer().
* Add a method sprite:get_frame_src_xy() (#1093).
* sprite:get_num_frames() can now optionally take an animation and direction.
* sprite:get_frame_delay() can now optionally take an animation.
* sprite:get_size() can now optionally take an animation and direction.
* sprite:get_origin() can now optionally take an animation and direction.

Data files format changes
-------------------------

* Make the tileset entities image optional (#884).

___________________________

Solarus 1.5.3 (2016-04-01)
__________________________

* Speed up loading maps by keeping tilesets in a cache (#1019).
* Fix text_surface:set_horizontal/vertical_alignment() not working.
* Fix parallax dynamic tiles still displayed when disabled or invisible.
* Improve error message of non-square tile patterns with diagonal obstacles.

__________________________

Solarus 1.5.1 (2016-11-29)
__________________________

Engine changes
--------------

* Add Spanish translation of the launcher GUI (thanks Diarandor!).
* Fix registering quest to the launcher at quest install time (#948).
* Fix crash when a carried bomb explodes (#953).
* Fix crash when a scrolling teletransporter is incorrectly placed (#977).
* Fix crash when an entity has a wrong savegame variable type (#1008).
* Fix memory leak when creating lots of surfaces (#962).
* Fix cleanup of the quest files at exit.
* Fix error in sol.main.load_settings() when the file does not exist.
* Fix ground ignored after hero:unfreeze() or back to solid ground (#827).