@@ -21,6 +21,7 @@
 #include "solarus/lowlevel/System.h"
 #include "solarus/CurrentQuest.h"
 #include "solarus/QuestProperties.h"
+#include "solarus/QuestResources.h"
 #include "solarus/MainLoop.h"
 #include "solarus/Settings.h"
 #include <lua.hpp>
@@ -52,6 +53,7 @@ void LuaContext::register_main_module() {
       { "save_settings", main_api_save_settings },
       { "get_distance", main_api_get_distance },
       { "get_angle", main_api_get_angle },
+      { "get_resource_ids", main_api_get_resource_ids },
       { "get_type", main_api_get_type },
       { "get_metatable", main_api_get_metatable },
       { "get_os", main_api_get_os },
@@ -338,6 +340,33 @@ int LuaContext::main_api_get_angle(lua_State* l) {
     double angle = Geometry::get_angle(x1, y1, x2, y2);
 
     lua_pushnumber(l, angle);
+    return 1;
+  });
+}
+
+/**
+ * \brief Implementation of sol.main.get_resource_ids().
+ * \param l The Lua context that is calling this function.
+ * \return Number of values to return to Lua.
+ */
+int LuaContext::main_api_get_resource_ids(lua_State* l) {
+
+  return LuaTools::exception_boundary_handle(l, [&] {
+
+    ResourceType resource_type = LuaTools::check_enum<ResourceType>(l, 1);
+    const QuestResources::ResourceMap& elements = CurrentQuest::get_resources().get_elements(resource_type);
+
+    // Build a Lua array containing the ids.
+    lua_settop(l, 0);
+    lua_newtable(l);
+    int i = 0;
+    for (const std::pair<std::string, std::string>& kvp : elements) {
+      const std::string& id = kvp.first;
+      push_string(l, id);
+      lua_rawseti(l, 1, i);
+      ++i;
+    }
+
     return 1;
   });
 }
